<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical" android:layoutDirection="rtl">
	<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/appbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize">
		<androidx.appcompat.widget.Toolbar
				android:id="@+id/top_bar"
				android:layout_width="match_parent"
				android:layoutDirection="rtl"
				android:layout_height="?attr/actionBarSize"
				android:background="?attr/colorPrimary"
				android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
			<TextView
					android:id="@+id/txt_title"
					android:text="@string/title"
					android:textColor="#ffffff"
					android:textSize="14sp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_weight="1"/>
		</androidx.appcompat.widget.Toolbar>
	</com.google.android.material.appbar.AppBarLayout>
	<androidx.drawerlayout.widget.DrawerLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			xmlns:tools="http://schemas.android.com/tools"
			android:id="@+id/drawer_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:openDrawer="start">
		<LinearLayout
				android:orientation="vertical"
				android:gravity="center"
				android:layout_width="match_parent" android:layout_height="match_parent">
			<LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
			              android:orientation="vertical"
			              android:layout_weight="1"
			              android:gravity="center"
			>

				<TextView
						android:id="@+id/txt_date"
						android:layout_height="wrap_content" android:layout_width="wrap_content"
						android:textColor="#222222"
						android:textSize="16sp"
						android:gravity="center"
				/>
				<LinearLayout
						android:orientation="horizontal"
						android:background="#ffffff"
						android:layout_marginTop="24dp"
						android:layout_width="match_parent" android:layout_height="wrap_content">
					<androidx.appcompat.widget.AppCompatSpinner
							android:id="@+id/spn_format"
							android:layout_width="0dp"
							android:paddingEnd="16dp"
							android:paddingStart="16dp"
							android:layout_weight="1"
							android:layout_height="wrap_content"
							android:paddingTop="8dp"
							android:paddingBottom="8dp"
					/>
				</LinearLayout>
			</LinearLayout>

			<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
			           android:src="@drawable/fork"
			           android:layout_gravity="bottom"
			           android:id="@+id/img_forg"/>
		</LinearLayout>
		<com.google.android.material.navigation.NavigationView
				android:id="@+id/nav_view"
				android:layout_width="wrap_content"
				app:itemTextColor="#000"
				android:background="#222222"
				android:layout_height="match_parent"
				android:layout_gravity="start"
				android:layoutDirection="rtl"
				android:fitsSystemWindows="true">
			<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent" android:layout_height="wrap_content">
				<TextView
						android:id="@+id/txt_to_show"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/showCalc"
						android:textColor="#fff"
						android:padding="16sp"
						android:textSize="16sp"
				/>
				<TextView
						android:id="@+id/txt_to_jalali"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/converterjalali"
						android:textColor="#fff"
						android:padding="16sp"
						android:textSize="16sp"
				/>
				<TextView
						android:id="@+id/txt_to_grg"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/convertergrg"
						android:textColor="#fff"
						android:padding="16sp"
						android:textSize="16sp"
				/>
				<TextView
						android:id="@+id/ageCalc"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/ageCalc"
						android:textColor="#fff"
						android:padding="16sp"
						android:textSize="16sp"
				/>
			</LinearLayout>
		</com.google.android.material.navigation.NavigationView>

	</androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>